# moveblock-backend

./: .env  .gitignore  Cargo.toml
crates/controller/: Cargo.toml
crates/controller/src/: config.rs  service.rs
crates/controller/src/service/: account.rs  block_stack.rs  domain.rs  function.rs
crates/controller/src/service/domain/: account.rs  block_stack.rs  function.rs  module.rs
crates/database/: Cargo.toml
crates/database/migrations/: 20230116234230_details.down.sql  20230116234230_details.up.sql  20230126085733_block_stacks.down.sql  20230126085733_block_stacks.up.sql
crates/database/src/: db.rs  error.rs  models.rs
crates/database/src/models/: module_hub.rs
crates/database/src/models/block_stack/: stack.rs
crates/database/src/models/module_hub/composite/: function.rs  module.rs
crates/database/src/models/module_hub/core/: function.rs  module.rs
crates/database/src/models/module_hub/detail/: account.rs  function.rs  mod.rs  module.rs
crates/middleware/: Cargo.toml
crates/middleware/src/: lib.rs
crates/move-generator/: Cargo.toml
crates/move-generator/src/: error.rs  lib.rs
