[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[dependencies.sqlx]
version = "0.6.2"
features = ["runtime-actix-native-tls", "postgres", "any", "macros", "migrate", "chrono", "time", "json"]

[dependencies.aptos-sdk]
git = "https://github.com/aptos-labs/aptos-core"
branch = "main"

[dependencies]
database = {path ="../database"}
middleware = {path = "../middleware"}
move-generator = {path = "../move-generator"}
actix-http = "3.2.2"
actix-web-lab = "0.18.9"
actix-web = "4.2.1"
actix-cors = "0.6.4"
serde_json = "1.0.91"
actix-rt = "2.7.0"
futures = "0.3.24"
env_logger = "0.10.0"
thiserror = "1.0.38"
derive_more = "0.99.17"
dotenv = "0.15.0"
hex = "0.4.3"
anyhow = "1.0.68"
crossbeam-channel = "0.5.6"
tokio = "1.25.0"
url = "2.3.1"
reqwest = "0.11.14"