[package]
name = "move-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.2.2"
features = ["v4"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.14"
features = ["json"]

[dependencies.tokio]
version = "1.25.0"
features = ["full"]

[dependencies]
thiserror = "1.0.38"
toml = "0.7.1"
dotenv = "0.15.0"
async-trait = "0.1.64"
anyhow = "1.0.68"
futures = "0.3.24"